# lipu-tenpo

./: Cargo.toml  README.md  test.csv
src/: app.rs  config.rs  entries.rs  files.rs  handler.rs  lib.rs  main-orig.rs  main.rs  subcommands.rs  tui.rs  ui.rs
test/: config.toml  test.csv
