[package]
name = "lipu-tenpo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {package = "ratatui", version = "0.21.0"}
crossterm = "0.26.1"
tui-input = "0.7.0"
unicode-width = "0.1.10"
clap = {version = "*", features = ["derive"]}
chrono = {version = "*", features = ["serde"]}
serde = {version = "*", features = ["derive"]}
csv = "*"
directories = "5.0.1"
