[package]
name = "lipu-tenpo"
version = "0.1.0"
authors = ["ashestosea"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {package = "ratatui", version = "0.21.0"}
crossterm = "0.26.1"
tui-input = "0.7.1"
unicode-width = "0.1.10"
clap = {version = "4.3.4", features = ["derive"]}
chrono = {version = "0.4.26", features = ["serde"]}
serde = {version = "1.0.164", features = ["derive"]}
csv = "1.2.2"
directories = "5.0.1"
toml = "0.7.4"
