[package]
name = "lipu-tenpo"
version = "0.5.0"
authors = ["ashestosea"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.28.0"
crossterm = "0.28.1"
tui-input = "0.10.0"
unicode-width = "0.1.10"
clap = {version = "4.3.4", features = ["derive"]}
chrono = {version = "0.4.26", features = ["serde"]}
serde = {version = "1.0.164", features = ["derive"]}
csv = "1.2.2"
directories = "5.0.1"
toml = "0.8.12"
fuzzydate = "0.2.1"
indicium = "0.6.1"
